--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/carousel.css" />
+    <link rel="icon" href="images/favicon.ico" />
+
     <script src="js/main.js" defer></script>
     <script src="js/carousel.js" defer></script>
   </head>
@@ -67,7 +69,10 @@
           </a>
         </li>
         <li>
-          <a class="uppercase text-dark letter-spacing-2 nav-link" href="login.html">
+          <a
+            class="uppercase text-dark letter-spacing-2 nav-link"
+            href="login.html"
+          >
             <span aria-hidden="true">04</span>Login
           </a>
         </li>
@@ -84,7 +89,11 @@
             <div>
               <p class="text-justify">
                 The
-                <b><abbr title="UEFA Champions League" tabindex="0">UCL</abbr></b>
+                <b
+                  ><abbr title="UEFA Champions League" tabindex="0"
+                    >UCL</abbr
+                  ></b
+                >
                 is an annual club football competition organised by the
                 <span class="semi-bold"
                   ><i>Union of European Football Associations (UEFA)</i></span
@@ -101,8 +110,8 @@
                 <span class="bold"
                   >the most prestigious club competition in European
                   football</span
-                >, played by the national league champions (and, for some nations,
-                one or more runners-up) of their national associations.
+                >, played by the national league champions (and, for some
+                nations, one or more runners-up) of their national associations.
               </p>
             </div>
           </div>
@@ -124,7 +133,9 @@
         <div class="mySlides fade">
           <div class="numbertext">2 / 4</div>
           <img class="slideshow_item" src="images/CR7.jpg" alt="" />
-          <div class="slideshow_item-caption">Cristiano Ronaldo bicycle kick</div>
+          <div class="slideshow_item-caption">
+            Cristiano Ronaldo bicycle kick
+          </div>
         </div>
         <!--Slide 3-->
         <div class="mySlides fade">
@@ -135,7 +146,11 @@
         <!--Slide 4-->
         <div class="mySlides fade">
           <div class="numbertext">4 / 4</div>
-          <img class="slideshow_item" src="images/Liverpool-winner.jpg" alt="" />
+          <img
+            class="slideshow_item"
+            src="images/Liverpool-winner.jpg"
+            alt=""
+          />
           <div class="slideshow_item-caption">UCL Champions of 2018/19</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -160,12 +175,33 @@
             <div>
               <p class="text-justify">
                 The UEFA Champions League Anthem, officially titled simply
-                <q class="bold">Champions League</q>, is the official anthem of the UEFA Men's Champions League, written by English composer Tony Britten in 1992, and based on George Frideric Handel's Zadok the Priest. It was also the official anthem of the UEFA Women's Champions League from its creation in 2001 to the 2021 creation of an independent anthem. The complete anthem is about three minutes long, and has two short verses and the chorus. The lyrics are in UEFA's three official languages: English, French, and German.
+                <q class="bold">Champions League</q>, is the official anthem of
+                the UEFA Men's Champions League, written by English composer
+                Tony Britten in 1992, and based on George Frideric Handel's
+                Zadok the Priest. It was also the official anthem of the UEFA
+                Women's Champions League from its creation in 2001 to the 2021
+                creation of an independent anthem. The complete anthem is about
+                three minutes long, and has two short verses and the chorus. The
+                lyrics are in UEFA's three official languages: English, French,
+                and German.
               </p>
             </div>
             <div>
               <p class="text-justify">
-                The chorus is set to the exclamations <q><i>Die Meister! Die Besten! Les grandes équipes! The champions!</i></q>. The anthem is played insidethe stadium before the start of each UEFA Champions League match, in addition to the beginning and end of television broadcasts of the games. Special vocal versions of the anthem have been performed live at the UEFA Champions League Final. UEFA's official website states, <q class="semi-bold">the anthem is now almost as iconic as the trophy.</q>
+                The chorus is set to the exclamations
+                <q
+                  ><i
+                    >Die Meister! Die Besten! Les grandes équipes! The
+                    champions!</i
+                  ></q
+                >. The anthem is played insidethe stadium before the start of
+                each UEFA Champions League match, in addition to the beginning
+                and end of television broadcasts of the games. Special vocal
+                versions of the anthem have been performed live at the UEFA
+                Champions League Final. UEFA's official website states,
+                <q class="semi-bold"
+                  >the anthem is now almost as iconic as the trophy.</q
+                >
               </p>
             </div>
           </div>
@@ -187,41 +223,59 @@
         </div>
         <!--quotes-->
         <div class="container">
-            <div class="quotes">
-              <div class="quote">
-                  <q class="text-justify">
-                    It's actually pretty nice when you walk out onto the pitch and you listen to it. You then know it’s a different match. It reminds you how special and important this competition is
-                  </q>
-                  <h2>Lionel Messi</h2>
-              </div>
-              <div class="quote">
-                  <q class="text-justify">
-                    It’s always emotional to hear the Champions League anthem
-                  </q>
-                  <h2>Gianluigi Buffon</h2>
-              </div>
-              <div class="quote">
-                  <q class="text-justify">
-                    There's nothing else like it, hairs on the back of your neck time..
-                  </q>
-                  <h2>Gareth Bale</h2>
-              </div>
+          <div class="quotes">
+            <div class="quote">
+              <q class="text-justify">
+                It's actually pretty nice when you walk out onto the pitch and
+                you listen to it. You then know it’s a different match. It
+                reminds you how special and important this competition is
+              </q>
+              <h2>Lionel Messi</h2>
             </div>
+            <div class="quote">
+              <q class="text-justify">
+                It’s always emotional to hear the Champions League anthem
+              </q>
+              <h2>Gianluigi Buffon</h2>
+            </div>
+            <div class="quote">
+              <q class="text-justify">
+                There's nothing else like it, hairs on the back of your neck
+                time..
+              </q>
+              <h2>Gareth Bale</h2>
+            </div>
+          </div>
         </div>
         <!--embeded twitter-content-->
         <div class="container">
           <div class="wrapper-tweet">
             <blockquote class="twitter-tweet" data-lang="en" data-theme="light">
-              <p lang="fr" dir="ltr">😍
-                <a href="https://twitter.com/hashtag/UCL?src=hash&amp;ref_src=twsrc%5Etfw">#UCL</a> anthem time!
-                <br>
-                <br>
+              <p lang="fr" dir="ltr">
+                😍
+                <a
+                  href="https://twitter.com/hashtag/UCL?src=hash&amp;ref_src=twsrc%5Etfw"
+                  >#UCL</a
+                >
+                anthem time!
+                <br />
+                <br />
                 🎶 𝘋𝘪𝘦 𝘔𝘦𝘪𝘴𝘵𝘦𝘳!
-                <br>𝘋𝘪𝘦 𝘉𝘦𝘴𝘵𝘦𝘯!
-                <br>𝘓𝘦𝘴 𝘨𝘳𝘢𝘯𝘥𝘦𝘴 é𝘲𝘶𝘪𝘱𝘦𝘴...<br>____ ____ 🎶
-                <a href="https://t.co/4eIbaiZb29">pic.twitter.com/4eIbaiZb29</a></p>&mdash; UEFA Champions League (@ChampionsLeague)
-                <a href="https://twitter.com/ChampionsLeague/status/1199386211233812481?ref_src=twsrc%5Etfw">November 26, 2019</a>
-              </blockquote> <script async crossorigin="anonymous" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <br />𝘋𝘪𝘦 𝘉𝘦𝘴𝘵𝘦𝘯! <br />𝘓𝘦𝘴 𝘨𝘳𝘢𝘯𝘥𝘦𝘴 é𝘲𝘶𝘪𝘱𝘦𝘴...<br />____ ____ 🎶
+                <a href="https://t.co/4eIbaiZb29">pic.twitter.com/4eIbaiZb29</a>
+              </p>
+              &mdash; UEFA Champions League (@ChampionsLeague)
+              <a
+                href="https://twitter.com/ChampionsLeague/status/1199386211233812481?ref_src=twsrc%5Etfw"
+                >November 26, 2019</a
+              >
+            </blockquote>
+            <script
+              async
+              crossorigin="anonymous"
+              src="https://platform.twitter.com/widgets.js"
+              charset="utf-8"
+            ></script>
           </div>
         </div>
       </section>
@@ -239,20 +293,21 @@
               <h2>Trophy</h2>
               <hr />
               <p class="text-justify">
-                The European Champion Clubs' Cup, also known as the European Cup,
-                is a trophy awarded annually by UEFA to the football club that
-                wins the UEFA Champions League. In its former form, the
+                The European Champion Clubs' Cup, also known as the European
+                Cup, is a trophy awarded annually by UEFA to the football club
+                that wins the UEFA Champions League. In its former form, the
                 competition bore the same name as the Cup and was also known as
                 the European Cup before being renamed from the 1992/93 season.
-                Several physical trophies bore this name, as a club was allowed to
-                keep the trophy after five wins or three consecutive victories and
-                a new trophy had to be forged for the following season. The
-                original European Cup trophy was donated by the French sports
-                newspaper L'Équipe. In March 1967, this trophy was permanently
-                awarded to Real Madrid. At that time, Real Madrid was the reigning
-                champion and had won a total of six titles, including the first
-                five competitions from 1956 to 1960, making Celtic the first club
-                to win the trophy in its current form in 1967.
+                Several physical trophies bore this name, as a club was allowed
+                to keep the trophy after five wins or three consecutive
+                victories and a new trophy had to be forged for the following
+                season. The original European Cup trophy was donated by the
+                French sports newspaper L'Équipe. In March 1967, this trophy was
+                permanently awarded to Real Madrid. At that time, Real Madrid
+                was the reigning champion and had won a total of six titles,
+                including the first five competitions from 1956 to 1960, making
+                Celtic the first club to win the trophy in its current form in
+                1967.
               </p>
             </div>
           </div>
