--- a/public/history.html
+++ b/public/history.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/history.css" />
+    <link rel="icon" href="images/favicon.ico" />
+
     <script src="js/main.js" defer></script>
   </head>
 
