--- a/public/stats.html
+++ b/public/stats.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/stats.css" />
+    <link rel="icon" href="images/favicon.ico" />
 
     <script src="js/main.js" defer></script>
   </head>
